--- a/soul/src/main/resources/application.properties
+++ b/soul/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-spring.security.user.name=jizzy
-spring.security.user.password=jizzy
+#spring.security.user.name=jizzy
+#spring.security.user.password=jizzy
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/soul
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Suhail885
