--- a/soul/src/main/resources/application.properties
+++ b/soul/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/soul
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
